title town catering

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Title Town Catering</title>
 </head>
 <body>
-    
+    <!--Banner Section-->
+    <div class="banner">
+        <h1>Big Al's Landing Page</h1>
+        <img id = "small-bigal" src = "./resources/images/bigal1.png" alt="">
+        <p>Because everything is better with Big Al</p>
+    </div>
 </body>
 </html>
