adding the title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--Banner Section-->
     <div class="banner">
-        <h1>Big Al's Landing Page</h1>
+        <h1>Title Town Catering</h1>
         <img id = "small-bigal" src = "./resources/images/bigal1.png" alt="">
         <p>Because everything is better with Big Al</p>
     </div>
