--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
 <body>
     <!--Banner Section-->
     <div class="banner">
-        <h1>Big Al's Landing Page</h1>
+        <h1>Title Town Catering</h1>
         <img id = "small-bigal" src = "./resources/images/bigal1.png" alt="">
-        <p>Because everything is better with Big Al</p>
+        <p>Menu is below</p>
     </div>
+    <nav class="navbar navbar-default">
+        <div class="navabr-header">
+        <a class="navbar-brand" href="#">Joke Project</a>
+        </div>
+        <div id="navbar" class="navbar-collapse navbar">
+        <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li ><a href="#">About</a></li>
+        <li ><a href="#">Contact Us</a></li>
+        </ul>
+        <ul class="nav navabr-nav navbar-right">
+        <li class="active"><a href="#">Help</a></li>
+        </ul>
+        </div>
 </body>
 </html>
