--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="banner">
         <h1>Title Town Catering</h1>
         <img id = "small-bigal" src = "./resources/images/bigal1.png" alt="">
-        <p>Because everything is better with Big Al</p>
+        <h2>Menu</h2>
     </div>
     <nav class="navbar navbar-default">
         <div class="navabr-header">
