--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
         <div class="navabr-header">
         <a class="navbar-brand" href="#">Joke Project</a>
         </div>
-        <div id="navbar" class="navbar-collapse navbar">
-        <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li ><a href="#">About</a></li>
-        <li ><a href="#">Contact Us</a></li>
-        </ul>
         <ul class="nav navabr-nav navbar-right">
-        <li class="active"><a href="#">Help</a></li>
+        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="#">Login</a></li>
         </ul>
         </div>
 </body>
