--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -14,6 +14,8 @@
         <h1>Title Town Catering</h1>
         <h2>Menu</h2>
     </div>
+
+    </div>
     <nav class="navbar navbar-default">
         <div class="navabr-header">
         </div>
@@ -22,5 +24,47 @@
         <li class="active"><a href="#">Login</a></li>
         </ul>
         </div>
+    </nav>
+
+    <!--Shopping Cart starts here-->
+    <div class = "shoppinglist">
+    <h2>Shopping List</h2>
+    <p>
+        <!--Note to self: try not to hard code here-->
+        <ul>
+            <li class="menubulletpoints">Chocolate Chip Cookie</li>
+        </ul>
+    </p>
+    </div>
+
+        <!--Photos begin here-->
+        <div class="menu-display">
+            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/HouseSalad.jpeg" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChocChipCookie.png" alt="">
+        </div>
+
+        <!--Other shopping cart starts here-->
+        <!--
+        <form name="ShoppingList">
+            <fieldset>
+                <legend>Shopping cart</legend>
+                <label>Item: <input type="text" name="name"></label>
+                <label>Quantity: <input type="text" name="data"></label>
+        
+                <input type="button" value="Save"   onclick="SaveItem()">
+                <input type="button" value="Update" onclick="ModifyItem()">
+                <input type="button" value="Delete" onclick="RemoveItem()">
+                <input type="button" value="Clear" onclick="ClearAll()">
+            </fieldset>
+            <div id="items_table">
+                <h2>Shopping List</h2>
+                <table id="list"></table>
+                <label><input type="button" value="Clear" onclick="ClearAll()">
+                * Delete all items</label>
+            </div>
+        </form> 
+    -->
+        
 </body>
 </html>
