--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -28,11 +28,11 @@
 
     <!--Shopping Cart starts here-->
     <div class = "shoppinglist">
-    <h2>Shopping List</h2>
+    <h2><u>In Your Cart</u></h2>
     <p>
-        <!--Note to self: try not to hard code here-->
+        <!--Note to self: try not to hard code here. The manager will add things to the list-->
         <ul>
-            <li class="menubulletpoints">Chocolate Chip Cookie</li>
+            <li class="menubulletpoints">Chocolate Chip Cookie</li> <!-- Get all menu items would go here-->
         </ul>
     </p>
     </div>
@@ -42,6 +42,7 @@
             <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/HouseSalad.jpeg" alt="">
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
             <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChocChipCookie.png" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
         </div>
 
         <!--Other shopping cart starts here-->
