--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="nav navabr-nav navbar-right">
         <li class="active"><a href="#">Home</a></li>
-        <li class="active"><a href="#">Login</a></li>
+        <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
         </ul>
         </div>
     </nav>
