--- a/Client/resources/Login.html
+++ b/Client/resources/Login.html
@@ -12,7 +12,7 @@
         <div class="navabr-header">
         </div>
         <ul class="nav navabr-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/scripts/index.html">Home</a></li>
         <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
         </ul>
         </div>
