--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -32,7 +32,10 @@
     <p>
         <!--Note to self: try not to hard code here. The manager will add things to the list-->
         <ul>
+            <li class="menubulletpoints">House Salad</li>
+            <li class="menubulletpoints">Chicken Salad Sandwich</li>
             <li class="menubulletpoints">Chocolate Chip Cookie</li> <!-- Get all menu items would go here-->
+            <li class="menubulletpoints">Veggie Burger</li>
         </ul>
     </p>
     </div>
@@ -42,6 +45,10 @@
             <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/HouseSalad.jpeg" alt="">
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
             <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChocChipCookie.png" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/VeggieBurger.jpeg" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChickenSandwich.png" alt="">
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
         </div>
 
