--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -32,7 +32,7 @@
     <p>
         <!--Note to self: try not to hard code here. The manager will add things to the list-->
         <ul>
-            <li class="menubulletpoints">House Salad</li>
+            <li class="menubulletpoints">House Salad (quantity)</li>
             <li class="menubulletpoints">Chicken Salad Sandwich</li>
             <li class="menubulletpoints">Chocolate Chip Cookie</li> <!-- Get all menu items would go here-->
             <li class="menubulletpoints">Veggie Burger</li>
