--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -36,6 +36,7 @@
             <li class="menubulletpoints">Chicken Salad Sandwich</li>
             <li class="menubulletpoints">Chocolate Chip Cookie</li> <!-- Get all menu items would go here-->
             <li class="menubulletpoints">Veggie Burger</li>
+            <button id="checkoutbutton">Checkout</button>
         </ul>
     </p>
     </div>
