--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title Town Catering Company</title>
     <title>Title Town Catering</title>
-    <link rel="stylesheet" href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <!--Banner Section-->
