--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="nav navabr-nav navbar-right">
         <li class="active"><a href="#">Home</a></li>
-        <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
+        <li class="active"><a href="../Login.html">Login</a></li>
         </ul>
         </div>
     </nav>
@@ -43,14 +43,14 @@
 
         <!--Photos begin here-->
         <div class="menu-display">
-            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/HouseSalad.jpeg" alt="">
-            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
-            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChocChipCookie.png" alt="">
-            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
-            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/VeggieBurger.jpeg" alt="">
-            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
-            <img id = "menuitems" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ChickenSandwich.png" alt="">
-            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "../images/HouseSalad.jpeg" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "../images/ChocChipCookie.png" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "../images/VeggieBurger.jpeg" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            <img id = "menuitems" src = "../images/ChickenSandwich.png" alt="">
+            <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
         </div>
 
         <!--Other shopping cart starts here-->
