--- a/Client/resources/Login.html
+++ b/Client/resources/Login.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/css/login.css">
+    <link rel="stylesheet" href="../resources/css/login.css">
 </head>
 <body>
     <nav class="navbar navbar-default">
         <div class="navabr-header">
         </div>
         <ul class="nav navabr-nav navbar-right">
-        <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/scripts/index.html">Home</a></li>
-        <li class="active"><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
+        <li class="active"><a href="../resources/scripts/index.html">Home</a></li>
+        <li class="active"><a href="../resources/Login.html">Login</a></li>
         </ul>
         </div>
     </nav>
