--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -43,14 +43,30 @@
 
         <!--Photos begin here-->
         <div class="menu-display">
+            <div>
             <img id = "menuitems" src = "../images/HouseSalad.jpeg" alt="">
+            </div>
+            <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            </div>
+            <div>
             <img id = "menuitems" src = "../images/ChocChipCookie.png" alt="">
+            </div>
+            <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            </div>
+            <div>
             <img id = "menuitems" src = "../images/VeggieBurger.jpeg" alt="">
+            </div>
+            <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            </div>
+            <div>
             <img id = "menuitems" src = "../images/ChickenSandwich.png" alt="">
+            </div>
+            <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
+            </div>
         </div>
 
         <!--Other shopping cart starts here-->
