--- a/Client/resources/ManagerDashboard.html
+++ b/Client/resources/ManagerDashboard.html
@@ -16,6 +16,7 @@
   <option value="Most profitable items">Most profitable items</option>
   <option value="Percent pickup vs delivered">Percent pickup vs delivered</option>
   <option value="Most popular hours">Most popular hours of service per day</option>
+  <option value="Least popular item">Least popular item</option>
 </select>
 
 <h2>Upcoming events:</h2>
