--- a/Client/resources/Login.html
+++ b/Client/resources/Login.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../resources/css/login.css">
 </head>
 <body>
-    <script src="./scripts/login.js"></script>
     <nav class="navbar navbar-default">
         <div class="navabr-header">
         </div>
@@ -28,7 +27,8 @@
         <form id="login-form">
           <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
           <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-          <input type="submit" value="Login" id="loginbutton">
+          <input type="submit" value="Login" id="login-form-submit">
         </form>
+        <script src="./scripts/login.js"></script> <!--put scripts at the bottom-->
 </body>
 </html>
