--- a/Client/resources/ManagerDashboard.html
+++ b/Client/resources/ManagerDashboard.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="../resources/css/ManagerDashboard.css">
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="navabr-header">
+    </div>
+    <ul class="nav navabr-nav navbar-right">
+    <li class="active"><a href="../resources/scripts/index.html">Home</a></li>
+    <li class="active"><a href="../resources/Login.html">Login</a></li>
+    </ul>
+    </div>
+</nav>
+<div>
 <h1>Welcome to the Manager Dashboard</h1>
 <h2>Choose a report to view:</h2>
 <select name="reports" id="reports">
@@ -18,7 +28,7 @@
   <option value="Most popular hours">Most popular hours of service per day</option>
   <option value="Least popular item">Least popular item</option>
 </select>
-
+</div>
 <h2>Upcoming events:</h2>
 <div class="upcoming">
     <ul>
