--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title Town Catering Company</title>
     <title>Title Town Catering</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--Banner Section-->
     <div class="banner">
         <h1>Title Town Catering</h1>
@@ -90,6 +92,7 @@
             </div>
         </form> 
     -->
-        
+    <!--Latest bootstrap jQuery-->
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
 </body>
 </html>
