--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -71,27 +71,9 @@
             </div>
         </div>
 
-        <!--Other shopping cart starts here-->
-        <!--
-        <form name="ShoppingList">
-            <fieldset>
-                <legend>Shopping cart</legend>
-                <label>Item: <input type="text" name="name"></label>
-                <label>Quantity: <input type="text" name="data"></label>
-        
-                <input type="button" value="Save"   onclick="SaveItem()">
-                <input type="button" value="Update" onclick="ModifyItem()">
-                <input type="button" value="Delete" onclick="RemoveItem()">
-                <input type="button" value="Clear" onclick="ClearAll()">
-            </fieldset>
-            <div id="items_table">
-                <h2>Shopping List</h2>
-                <table id="list"></table>
-                <label><input type="button" value="Clear" onclick="ClearAll()">
-                * Delete all items</label>
-            </div>
-        </form> 
-    -->
+    <script src="index.js"></script>
+    <script src="receipt.js"></script>
+    
     <!--Latest bootstrap jQuery-->
     <script src="https://code.jquery.com/jquery-latest.js"></script>
 </body>
