--- a/Client/resources/Calendar.html
+++ b/Client/resources/Calendar.html
@@ -20,6 +20,15 @@
     <script src="http://cdn.kendostatic.com/2015.1.429/js/kendo.all.min.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="navabr-header">
+        </div>
+        <ul class="nav navabr-nav navbar-right">
+        <li><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/scripts/index.html">Home</a></li>
+        <li><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
+        </ul>
+        </div>
+    </nav>
     <div id="Calendar">
         <div class="demo-section k-header" style="width: 100%; text-align: center; background-color: #660000;">
                       <div id="calendar"></div>
