ask how to add a new window after the date is selected and why the links for the navbar are being weird

--- a/Client/resources/Calendar.html
+++ b/Client/resources/Calendar.html
@@ -28,6 +28,7 @@
         <li><a href="/Users/williambonner/Source/repos/TitleTownCatering/Client/resources/Login.html">Login</a></li>
         </ul>
         </div>
+        <!--Questions for office hours: why does the href not work and go to their website? And how can I do something on the selection of a date??-->
     </nav>
     <div id="Calendar">
         <div class="demo-section k-header" style="width: 100%; text-align: center; background-color: #660000;">
@@ -40,7 +41,6 @@
                     });
                 </script>
             </div>
-         
     <!--
 <div class="month">
     <ul>
@@ -92,5 +92,6 @@
     <li><span class="active">30</span></li>
   </ul>
   -->
+    <script src="./scripts/calendar.js"></script> <!--put scripts at the bottom-->
 </body>
 </html>
