--- a/Client/resources/Receipt.html
+++ b/Client/resources/Receipt.html
@@ -117,7 +117,7 @@
                         <option value="21"> 2021</option>
                         <option value="22"> 2022</option>
                         <option value="23"> 2023</option>
-                        <option value="23"> 2023</option>
+                        <option value="23"> 2024</option>
                     </select>
                 </div>
                 <div class="form-group" id="credit_cards">
@@ -135,5 +135,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="assets/js/jquery.payform.min.js" charset="utf-8"></script>
     <script src="assets/js/script.js"></script>
+    <script src="scripts/receipt.js"></script>
 </body>
 </html>
