--- a/Client/resources/ManagerDashboard.html
+++ b/Client/resources/ManagerDashboard.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="../resources/css/ManagerDashboard.css">
 </head>
 <body>
+
+  <div class="banner">
+    <h1>Welcome to the Manager Dashboard</h1>
+  </div>
+  
   <nav class="navbar navbar-default">
     <div class="navabr-header">
-    </div>
+    
     <ul class="nav navabr-nav navbar-right">
     <li class="active"><a href="../resources/scripts/index.html">Home</a></li>
     <li class="active"><a href="../resources/Login.html">Login</a></li>
     </ul>
-    </div>
+  </div>
+
 </nav>
-<div>
-<h1>Welcome to the Manager Dashboard</h1>
+<div class="reportdropdown">
 <h2>Choose a report to view:</h2>
 <select name="reports" id="reports">
   <option value="Orders per month">Orders per month</option>
