--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -18,12 +18,16 @@
     </div>
 
     </div>
+
     <nav class="navbar navbar-default">
-        <div class="navabr-header">
-        </div>
-        <ul class="nav navabr-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="active"><a href="../Login.html">Login</a></li>
+        <div class="navbar-header"></div>
+        <div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="../Login.html">Login</a></li>
         </ul>
         </div>
     </nav>
