fixed bullet point list

--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -50,25 +50,25 @@
         <!--Photos begin here-->
         <div class="menu-display">
             <div>
-            <img id = "menuitems" src = "../images/HouseSalad.jpeg" alt="">
+            <img id = "menuitems" class = ".col-md-1" src = "../images/HouseSalad.jpeg" alt="">
             </div>
             <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
             </div>
             <div>
-            <img id = "menuitems" src = "../images/ChocChipCookie.png" alt="">
+            <img id = "menuitems" class = ".col-md-1" src = "../images/ChocChipCookie.png" alt="">
             </div>
             <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
             </div>
             <div>
-            <img id = "menuitems" src = "../images/VeggieBurger.jpeg" alt="">
+            <img id = "menuitems" class = ".col-md-1" src = "../images/VeggieBurger.jpeg" alt="">
             </div>
             <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
             </div>
             <div>
-            <img id = "menuitems" src = "../images/ChickenSandwich.png" alt="">
+            <img id = "menuitems" class = ".col-md-1" src = "../images/ChickenSandwich.png" alt="">
             </div>
             <div>
             <button id="shoppingcartbutton"><img id = "shoppingcartimage" src = "../images/ShoppingCart.png" alt=""></button>
