--- a/Client/resources/scripts/index.html
+++ b/Client/resources/scripts/index.html
@@ -37,11 +37,11 @@
     <h2><u>In Your Cart</u></h2>
     <p>
         <!--Note to self: try not to hard code here. The manager will add things to the list-->
+        <script type = "text/javascript" src = "/Cartfunctions/cartfunc.js">
+        getCart();
+        </script>
+
         <ul>
-            <li class="menubulletpoints">House Salad (quantity)</li>
-            <li class="menubulletpoints">Chicken Salad Sandwich</li>
-            <li class="menubulletpoints">Chocolate Chip Cookie</li> <!-- Get all menu items would go here-->
-            <li class="menubulletpoints">Veggie Burger</li>
             <button id="checkoutbutton">Checkout</button>
         </ul>
     </p>
